--- a/TowerOfDaedelus_WebApp/Properties/Resources.resx
+++ b/TowerOfDaedelus_WebApp/Properties/Resources.resx
@@ -147,7 +147,13 @@
   <data name="RoleIdVisitor" xml:space="preserve">
     <value>866470040563482656</value>
   </data>
+  <data name="targetGMChannel" xml:space="preserve">
+    <value>953545586852888626</value>
+  </data>
   <data name="targetGuildID" xml:space="preserve">
     <value>866469546109173792</value>
+  </data>
+  <data name="targetPublicChannel" xml:space="preserve">
+    <value>953545490472009768</value>
   </data>
 </root>
